chaning the description of what I learned in index.html

--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -45,17 +45,17 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>This experiment produces a very short story in which when refreshing the page would create random locations and names?</p>
+				<p>This experiment produces a very short generated story</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>The generate functions uses one of the variables in the arrays to select a random string along with finding a placeholder. The replacer function replaces placeholders in the template and insert the randomly selected string. The process continues until there isn't any avaliable words in the story</p>
+				<p>The "generate" function goes through each word in the template to find a placeholder word. When a placeholder word is detected, it would use the placeholder word to find if it matches the names of the arrays provided to start randomizing and reinserted to remove the placeholder</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>It was easy to observe how the generative stories are created in Glitch when it comes with the specific words are being replaced or are placeholders in the story. It was harder to understand the functions of the replacer, generator, and how a slot pattern works.</p>
+				<p>It was easy to observe how the generative stories are created in Glitch when it comes with the specific words are being replaced or are placeholders in the story. It was harder to understand the functions of the replacer, generator, and how a slot pattern works that was provided for us, but eventually I learned that it uses while loops, if-else statements, and psudo-randomness to create a simple generated story.</p>
 			</div>
 
 		</section>
