--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -34,6 +34,7 @@
 
 			<div class="minor-section">
 				<div id="canvas-container">
+					<script src="https://generative-mountain-scenery.glitch.me/"></script>
 				</div>
                 <div class="fullscreen-box">
                     <button id="fullscreen">Fullscreen</button>
