--- a/experiment4(farmworld) copy 2/index.html
+++ b/experiment4(farmworld) copy 2/index.html
@@ -64,10 +64,9 @@
 
 		</section>
 		<nav id="links" class="minor-section">
-			<!-- Put link back to homepage here. -->
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-            </ul>
+			<ul>
+				<li><a href="../../index.html">Home</a></li>
+			</ul>
 		</nav>
 	</main>
 </body>
