--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<li><a href="./experiment4(farmworld)/index.html">Experiment 4a</a></li>
 					<li><a href="./experiment4(farmworld) copy/index.html">Experiment 4b</a></li>
 					<li><a href="./experiment4(farmworld) copy 2/index.html">Experiment 4c</a></li>
+					<li><a href="./experiment5/index.html">Experiment 5</a></li>
                 </ul>
             </div>
 
