--- a/experiment5/index.html
+++ b/experiment5/index.html
@@ -56,6 +56,12 @@
             <div class="minor-section">
                 <h2>Description</h2>
                 <p>Randomly attempts to replicate images of iconic landmarks</p>
+                <div class="image-wrapper">
+					<img class="SpaceNeedle" src="../img/SpaceNeedle.png" style="width: 300px; height: auto;">
+                    <img class="Bend" src="../img/Bend.png" style="width: 420px; height: auto;">
+                    <img class="Love" src="../img/Love.png" style="width: 520px; height: auto;">
+                    <img class="Pyramid" src="../img/Tri.png" style="width: 520px; height: auto;">
+				</div>
             </div>
 
             <div class="minor-section">
